samples/_failures_safe/1761607466_764290_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d69ab913.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_d69ab913.c:134:16: error: missing terminating " character
  134 |         printf("[%s] %
      |                ^~~~~~~
./samples/SAFE/__tmp_d69ab913.c:134:9: error: expected expression at end of input
  134 |         printf("[%s] %
      |         ^~~~~~
./samples/SAFE/__tmp_d69ab913.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d69ab913.c:134:9: error: expected declaration or statement at end of input
